--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,18 +3,20 @@
     Login
   </nb-card-header>
   <nb-card-body>
-    <div class="form-control-group">
-      <label class="label" for="input-username">Username</label>
-      <input id="input-username" nbInput fullWidth />
-    </div>
-
-    <div class="form-control-group">
-      <label class="label" for="input-password">Password</label>
-      <input id="input-password" type="password" nbInput fullWidth />
-    </div>
-
-    <div class="form-control-group">
-      <button nbButton status="primary" fullWidth>Login</button>
-    </div>
+    <form (ngSubmit)="login()">
+      <div class="form-control-group">
+        <label class="label" for="input-username">Username</label>
+        <input [(ngModel)]="username" name="username" id="input-username" nbInput fullWidth />
+      </div>
+  
+      <div class="form-control-group">
+        <label class="label" for="input-password">Password</label>
+        <input [(ngModel)]="password" name="password" id="input-password" type="password" nbInput fullWidth />
+      </div>
+  
+      <div class="form-control-group">
+        <button type="submit" nbButton status="primary" fullWidth>Login</button>
+      </div>
+    </form>
   </nb-card-body>
 </nb-card>
