Create ui for google login.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,12 @@
 <nb-layout>
   <nb-layout-header fixed>
-    <h3>Chat App</h3>
+    <div class="flex-container space-between">
+      <h3>Chat App</h3>
+
+      <div>
+        <button (click)="logout()" nbButton>Logout</button>
+      </div>
+    </div>
   </nb-layout-header>
 
   <nb-layout-column>
