--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -18,5 +18,11 @@
         <button type="submit" nbButton status="primary" fullWidth>Login</button>
       </div>
     </form>
+
+    <p class="text-center"><b>OR</b></p>
+
+    <div>
+      <app-google-login></app-google-login>
+    </div>
   </nb-card-body>
 </nb-card>
