--- a/frontend/src/app/chat-page/chat-page.component.html
+++ b/frontend/src/app/chat-page/chat-page.component.html
@@ -3,13 +3,13 @@
                    [type]="msg.type"
                    [message]="msg.text"
                    [reply]="msg.reply"
-                   [sender]="msg.user.name"
+                   [sender]="msg.user?.name"
                    [date]="msg.date"
                    [files]="msg.files"
                    [quote]="msg.quote"
                    [latitude]="msg.latitude"
                    [longitude]="msg.longitude"
-                   [avatar]="msg.user.avatar">
+                   [avatar]="msg.user?.avatar">
   </nb-chat-message>
   <nb-chat-form (send)="sendMessage($event)" [dropFiles]="true">
   </nb-chat-form>
